started regression notebook

--- a/002_Clash_of_the_regressors.ipynb
+++ b/002_Clash_of_the_regressors.ipynb
@@ -1,9 +1,215 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "widespread-beijing",
+   "metadata": {},
+   "source": [
+    "# Clash of the Regressors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "successful-attack",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.express as px\n",
+    "import plotly.graph_objects as graph_obj\n",
+    "import cufflinks as cf\n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "from sklearn.datasets import make_regression\n",
+    "from sklearn.model_selection import RepeatedKFold\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "random_state = 42"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "intermediate-gender",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X, y = make_regression(n_samples=1000, n_features=20, n_informative=15, noise=0.1,\n",
+    "random_state=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "precise-roots",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X,y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "fourth-suite",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(800, 20) (800,) (200, 20) (200,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train.shape, y_train.shape, X_test.shape, y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "smart-expansion",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cv = RepeatedKFold(n_splits=10, n_repeats=3, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "right-tiffany",
+   "metadata": {},
+   "source": [
+    "## Strong Learners"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "varying-accused",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.linear_model import Lasso\n",
+    "from sklearn.linear_model import Ridge\n",
+    "from sklearn.linear_model import ElasticNet\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.svm import LinearSVR"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "prescription-plumbing",
+   "metadata": {},
+   "source": [
+    "### Linear Regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "confidential-baseline",
+   "id": "japanese-monte",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "nonprofit-independence",
+   "metadata": {},
+   "source": [
+    "### Lasso Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "buried-castle",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "round-isaac",
+   "metadata": {},
+   "source": [
+    "### Ridge Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "challenging-growth",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "genuine-schedule",
+   "metadata": {},
+   "source": [
+    "### Elastic Net Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "electronic-archive",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "freelance-joyce",
+   "metadata": {},
+   "source": [
+    "### Linear Support Vector Regressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "lightweight-celebrity",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "verified-objective",
+   "metadata": {},
+   "source": [
+    "### Support vector Regressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "sound-pepper",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "simple-universal",
+   "metadata": {},
+   "source": [
+    "### Cross Validation of the Strong learning Regressors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "suitable-lesbian",
    "metadata": {},
    "outputs": [],
    "source": []
